[tool.poetry]
name = "emperior-01"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "emperior_01"}]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.3"
black = "^22.12.0"
isort = "^5.11.4"
colorama = "^0.4.6"
pytest = "^7.2.0"
prophet = "^1.1.1"
plotly = "^5.11.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
